--- a/CryptoTax/CryptoTax.csproj
+++ b/CryptoTax/CryptoTax.csproj
@@ -112,10 +112,11 @@
     <Compile Include="Transactions\AccountingMethodType.cs" />
     <Compile Include="Transactions\CapitalGain.cs" />
     <Compile Include="Cryptocurrency\CryptocurrencyType.cs" />
-    <Compile Include="Transactions\PortfolioSummaryCalculator.cs" />
+    <Compile Include="Transactions\PortfolioSummaryProvider.cs" />
     <Compile Include="Transactions\TaxCalculator.cs" />
     <Compile Include="Transactions\Transaction.cs" />
     <Compile Include="Transactions\TransactionParsingUtilities.cs" />
+    <Compile Include="Utilities\FormFactory.cs" />
     <EmbeddedResource Include="ImportTransactionsDialog.resx">
       <DependentUpon>ImportTransactionsDialog.cs</DependentUpon>
     </EmbeddedResource>
